# warp

./: .gitattributes  .gitignore  README.md  locations.example.yaml  main.py  pyproject.toml  tui.py
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/warp/mockgps/: HttpServer.kt  MainActivity.kt  MockLocationService.kt  TeleportReceiver.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
features/: 01-explore-by-map.md  02-walk-playback.md  03-shortcuts-crud.md  04-cli-quick-teleport.md  05-phone-app-home.md  06-first-time-setup.md  07-auto-plant.md  README.md
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.svelte  app.css
web/src/lib/: Map.svelte  api.ts  geo.ts  storage.ts
