[project]
name = "adb-gps-teleport"
version = "0.1.0"
description = "Remote control Android GPS via ADB broadcast to GPS JoyStick"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "geopy>=2.4.1",
    "typer>=0.15.1",
    "rich>=13.9.4",
    "textual>=0.86.0",
]

[project.scripts]
gps = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "tui.py"]
